# image-viewer

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
doc/: DESIGN.md  TODO.md
scripts/: format.sh  tidy.sh
src/: ImageView.cpp  ImageView.h  MainWindow.cpp  MainWindow.h  main.cpp
src/browse/: Browser.cpp  Browser.h
src/cache/: ImageCache.cpp  ImageCache.h  Prefetcher.cpp  Prefetcher.h
src/decode/: AvifDecoder.cpp  AvifDecoder.h  FtypBox.cpp  FtypBox.h  HeifDecoder.cpp  HeifDecoder.h  ImageDecoder.cpp  ImageDecoder.h  RawDecoder.cpp  RawDecoder.h
src/source/: ArchiveSource.cpp  ArchiveSource.h  FolderSource.cpp  FolderSource.h  ImageSource.cpp  ImageSource.h
test/: CMakeLists.txt  test_archive_source.cpp  test_browser.cpp  test_folder_source.cpp  test_image_cache.cpp  test_image_decoder.cpp  test_image_source.cpp  test_prefetcher.cpp
test/data/: sample.avif  sample.dng  sample.heic
test/support/: TestData.cpp  TestData.h
